2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* godmode/alerts/alert_list.builder.php: added the conditional to hide the
	create template or action when the user haven't privileges for this action.
	
	Fixes: #3182535

2011-02-21  Ramon Novoa  <rnovoa@artica.es>

	* operation/agentes/alerts_status.php: Merged from trunk. Fixed ACL
	  check for alerts.

2011-02-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
      * godmode/alerts/alert_list.list.php
        godmode/alerts/configure_alert_action.php
        godmode/alerts/alert_actions.php
        godmode/alerts/alert_list.builder.php: Fixed mistake merging bugfix from 
	trunk about alert actions thresholds.
	
2011-02-19  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_fsgraph.php: Merged from trunk. Fixed html
	entities are displayed on graphs when time format contains them.

2011-02-19  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/configurar_agente.php: Fixed bad layout when
	length of agent name is more than 25.

2011-02-18 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_db.php, operation/search_modules.php,
	operation/search_agents.php: sorry, I didn't think about the subgroups may
	have other subgroups (and this may be recursive), rewrite the SQL for
	search with groups, now the groups come from the PHP function to get
	all groups, children groups, grandchildren groups...

2011-02-18 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_db.php, operation/search_modules.php,
	operation/search_agents.php: fixed SQL querys, this querys in previous
	version haven't lines SQL code for to search into subgroups.

2011-02-18 Javier Lanz <javier.lanz@artica.es>

	* operation/servers/view_server.php: Fixed ACL permissions
	* operation/servers/view_server_detail.php: Fixed ACL permissions
	* operation/menu.php: Let an "AR" user view 'Pandora servers' menu
	
	Fix: #3183477
