@@ -1,0 +1,18 @@
+You have several options to use a SSH Java Plugin for SSH access from pandora:
+
+OpenSource (GPL).
+
+https://sourceforge.net/projects/gsi-sshterm/
+http://freshmeat.net/projects/sshtools-sshterm/
+
+Commercial (we cannot redistribute the applet due license restrictions!)
+
+http://www.appgate.com/downloads/MindTerm-3.4/mindterm_3.4-bin.zip
+
+In this extension we use Mindterm as default. just Get the JAR file and put on the extension/ssh_console directory with "mindterm.jar" filename. It will work.
+
+Another option is to use a full-featured SSH like JCTerm, but it cannot use IP from pandora and you need to set it yourself :(
+
+http://www.jcraft.com/jcterm/
+
+
