@@ -16,9 +16,14 @@
 function vnc_view() {
 	$idAgent = (int)get_parameter('id_agente', 0);
 	$ipAgent = get_db_value('direccion', 'tagente', 'id_agente', $idAgent);
-	?>
-	<iframe width="95%" height="500px" src="http://<?php echo $ipAgent;?>:5800"></iframe>
-	<?php
+
+	echo '<APPLET CODE="VncViewer.class" ARCHIVE="extensions/vnc/VncViewer.jar" WIDTH=750 HEIGHT=800>';
+	echo '<param name="Host" value="'.$ipAgent.'">';
+	echo '<param name="Port" value="5901">';
+	echo '<PARAM NAME="Scaling factor" VALUE=75>';
+	echo '</APPLET>';
+
+/* 	<iframe width="95%" height="500px" src="http://<?php echo $ipAgent;?>:5801"></iframe> */
 }
 
 add_extension_opemode_tab_agent('vnc_view', __('VNC view'), 'images/computer.png', 'vnc_view');
